--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,9 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
+  z-index: -1;
+  width: 100vh;
+  height: 100vh;
   filter: brightness(1.5) contrast(150%);
 }
 
